test_regress/t/t_interface_mismodport_bad.out
%Error: t/t_interface_mismodport_bad.v:35: Can't find definition of 'bad' in dotted signal: isub.bad
%Error:      Known scopes under 'bad': <no cells found>
%Error: Exiting due to
